argocd/example-apps/apps/rollouts-bg/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-bg
spec:
  replicas: 1
  strategy:
    blueGreen:
      
      # activeService specifies the service to update with the new template hash at time of promotion.
      # This field is mandatory for the blueGreen update strategy.
      activeService: rollout-bg-active
      # previewService specifies the service to update with the new template hash before promotion.
      # This allows the preview stack to be reachable without serving production traffic.
      # This field is optional.
      previewService: rollout-bg-preview
      # autoPromotionEnabled disables automated promotion of the new stack by pausing the rollout
      # immediately before the promotion. If omitted, the default behavior is to promote the new
      # stack as soon as the ReplicaSet are completely ready/available.
      # Rollouts can be resumed using: `kubectl argo rollouts promote ROLLOUT`
      #autoPromotionEnabled: false
      #autoPromotionSeconds: 
      scaleDownDelaySeconds: 30
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-bg
  template:
    metadata:
      labels:
        app: rollouts-bg
    spec:
      containers:
      - name: rollouts-bg
        #image: argoproj/rollouts-demo:green
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
